--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@
   height: 7rem;
   margin-left: 15rem;
   margin-right: 15rem;
-  border-right: solid black .05em;
-  border-bottom: solid black .05em;
-  border-left: solid black .05em;
-  border-radius: 0px 0px 20px 20px;
+  border-right: solid black .1rem;
+  border-bottom: solid black .1rem;
+  border-left: solid black .1rem;
+  border-radius: 0rem 0rem 3rem 3rem;
   font-family: 'Cormorant Garamond', serif;
-  font-size: 2.5em;
+  font-size: 3.5rem;
 }
 
 .lCard {
@@ -34,12 +34,12 @@
   opacity: .6;
   position: absolute;
   top: 10rem;
-  border: .15em solid black;
+  border: .15rem solid black;
 }
 
 .amaticBrand {
   font-family: 'Amatic SC', cursive;
-  font-size: 80px;
+  font-size: 9rem;
   position: absolute;
   top: 30rem;
   left: 10rem;
@@ -47,7 +47,7 @@
 }
 
 .jobTitle {font-family: 'Amatic SC', cursive;
-  font-size: 80px;
+  font-size: 8rem;
   position: relative;
   top: 33rem;
   right: 35rem;
@@ -60,12 +60,12 @@
 }
 
 #meImage {
-  height: 325px;
+  height: 35rem;
   width: auto;
   position: relative;
   top: 10rem;
   left: 30rem;
-  border-radius: 75px;
+  border-radius: 5rem;
 }
 
 .aboutBody {
@@ -76,13 +76,13 @@
   opacity: .6;
   position: absolute;
   top: 5rem;
-  border: 2px solid black;
+  border: .15rem solid black;
 }
 
 .aboutHead {
   font-family: 'Cormorant Garamond', serif;
-  font-size: 75px;
-  opacity: .99;
+  font-size: 6rem;
+  opacity: 1;
   text-align: left;
   position: relative;
   top: 12rem;
@@ -92,7 +92,7 @@
 
 .aboutContent {
   font-family: 'Cormorant Garamond', serif;
-  font-size: 2.5em;
+  font-size: 2.5rem;
   opacity: 1;
   font-weight: bold;
   text-align: left;
@@ -105,8 +105,8 @@
 
 .projectHead {
   font-family: 'Cormorant Garamond', serif;
-  font-size: 5em;
-  opacity: .99;
+  font-size: 6rem;
+  opacity: 1;
   text-align: left;
   position: relative;
   top: 12rem;
@@ -115,8 +115,8 @@
 
 .projectContent{
   font-family: 'Cormorant Garamond', serif;
-  font-size: 3em;
-  opacity: .99;
+  font-size: 4rem;
+  opacity: 1;
   text-align: left;
   position: relative;
   top: 12rem;
@@ -124,12 +124,20 @@
   margin: 4rem;
   right: 1rem;
   font-weight: bold;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.projectLeft, .projectRight {
+  display: flex;
+  flex-direction: column
 }
 
 .contact {
-  font-family: 'Cuprum', sans-serif;
-  font-size: 40px;
-  opacity: .99;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 4rem;
+  font-weight: bold;
+  opacity: 1;
   text-align: left;
   position: relative;
   top: 12rem;
@@ -143,13 +151,12 @@
 .picture{
   height: 60vh;
   width: auto;
-  opacity: .99;
-  border-radius: 25px
+  opacity: 1;
+  border-radius: 5rem;
 }
 
 i:hover {
   cursor: pointer;
-  font-size: 50px;
 }
 
 .picCarousel {
@@ -163,6 +170,12 @@ i:hover {
 i {
   padding: 10rem;
   padding-top: 20rem;
+  font-size: 5rem;
+}
+
+a {
+  padding: 1rem;
+
 }
 
 
