--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   border-bottom: solid black .1rem;
   border-left: solid black .1rem;
   border-radius: 0rem 0rem 3rem 3rem;
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Cormorant Infant', serif;
   font-size: 3.5rem;
 }
 
@@ -38,19 +38,20 @@
 }
 
 .amaticBrand {
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Cormorant SC', serif;
   font-size: 9rem;
   position: absolute;
-  top: 30rem;
+  top: 24rem;
   left: 10rem;
   -webkit-animation: fadein 3s;
 }
 
-.jobTitle {font-family: 'Amatic SC', cursive;
+.jobTitle {
+  font-family: 'Cormorant SC', serif;
   font-size: 8rem;
   position: relative;
-  top: 33rem;
-  right: 35rem;
+  top: 25rem;
+  right: 22rem;
   -webkit-animation: fadein 6s;
 }
 
@@ -63,8 +64,8 @@
   height: 35rem;
   width: auto;
   position: relative;
-  top: 10rem;
-  left: 30rem;
+  top: 26rem;
+  left: 35rem;
   border-radius: 5rem;
 }
 
@@ -80,7 +81,7 @@
 }
 
 .aboutHead {
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Cormorant SC', serif;
   font-size: 6rem;
   opacity: 1;
   text-align: left;
@@ -90,7 +91,7 @@
 }
 
 .aboutContent {
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Cormorant Infant', serif;
   font-size: 2.5rem;
   opacity: 1;
   font-weight: bold;
@@ -113,7 +114,7 @@
 }
 
 .projectContent{
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Cormorant Infant', serif;
   font-size: 4rem;
   opacity: 1;
   text-align: left;
